# py-lic-dsf

./: .gitignore  README.md  README.qmd  pyproject.toml
lic_dsf/: __init__.py  entrypoint.py  inputs.py  setters.py
